--- a/ShellMeter/MainWindow.xaml
+++ b/ShellMeter/MainWindow.xaml
@@ -5,8 +5,36 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ShellMeter"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="400" Width="300" MinHeight="300" MinWidth="400"
+        Loaded="Window_Loaded">
+    <Window.Resources>
+        <Style x:Key="ConnectPanel" TargetType="Control">
+            <Setter Property="ItemsControl.Margin" Value="10,5,10,5"/>
+            <Setter Property="ItemsControl.VerticalContentAlignment" Value="Center"/>
+            <Setter Property="ItemsControl.HorizontalContentAlignment" Value="Center"/>
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100"></ColumnDefinition>
+            <ColumnDefinition Width="100"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+
+        </Grid.ColumnDefinitions>
+        <TextBlock TextWrapping="WrapWithOverflow" Grid.Row="0" Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center" Margin="10,5,10,5">Select port name</TextBlock>
+        <ComboBox x:Name="cbPortNames" Grid.Row="0" Grid.Column="1" Style="{StaticResource ConnectPanel}"></ComboBox>
+        <Button x:Name="btConnect" Click="BtConnect_Click" Content="Connect" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ConnectPanel}"/>
+        <Button x:Name="btStart" Content="Start measure" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ConnectPanel}"/>
+        <ListView Grid.Row="0" Grid.Column="2" Grid.RowSpan="5" Margin="0,5,10,5"></ListView>
+        <TextBox x:Name="tbOutputLog" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="1" Margin="10,5,10,5" Foreground="Green"/>
+        <TextBox x:Name="tbInputLog" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="1" Margin="10,5,10,5" Foreground="Red"/>
     </Grid>
+
 </Window>
