--- a/ShellMeter/MainWindow.xaml
+++ b/ShellMeter/MainWindow.xaml
@@ -31,7 +31,7 @@
         <TextBlock TextWrapping="WrapWithOverflow" Grid.Row="0" Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center" Margin="10,5,10,5">Select port name</TextBlock>
         <ComboBox x:Name="cbPortNames" Grid.Row="0" Grid.Column="1" Style="{StaticResource ConnectPanel}"></ComboBox>
         <Button x:Name="btConnect" Click="BtConnect_Click" Content="Connect" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ConnectPanel}"/>
-        <Button x:Name="btStart" Content="Start measure" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ConnectPanel}"/>
+        <Button x:Name="btStart" Click="btStart_Click" Content="Start measure" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ConnectPanel}"/>
         <ListView Grid.Row="0" Grid.Column="2" Grid.RowSpan="5" Margin="0,5,10,5"></ListView>
         <TextBox x:Name="tbOutputLog" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="1" Margin="10,5,10,5" Foreground="Green"/>
         <TextBox x:Name="tbInputLog" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="1" Margin="10,5,10,5" Foreground="Red"/>
