--- a/ShellMeter/MainWindow.xaml
+++ b/ShellMeter/MainWindow.xaml
@@ -16,9 +16,10 @@
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"></RowDefinition>
-            <RowDefinition Height="50"></RowDefinition>
-            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="20"></RowDefinition>
+            <RowDefinition Height="35"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
@@ -28,13 +29,20 @@
             <ColumnDefinition></ColumnDefinition>
 
         </Grid.ColumnDefinitions>
-        <TextBlock TextWrapping="WrapWithOverflow" Grid.Row="0" Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center" Margin="10,5,10,5">Select port name</TextBlock>
-        <ComboBox x:Name="cbPortNames" Grid.Row="0" Grid.Column="1" Style="{StaticResource ConnectPanel}"></ComboBox>
-        <Button x:Name="btConnect" Click="BtConnect_Click" Content="Connect" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ConnectPanel}"/>
-        <Button x:Name="btStart" Click="btStart_Click" Content="Start measure" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ConnectPanel}"/>
-        <ListView Grid.Row="0" Grid.Column="2" Grid.RowSpan="5" Margin="0,5,10,5"></ListView>
-        <TextBox x:Name="tbOutputLog" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="1" Margin="10,5,10,5" Foreground="Green"/>
-        <TextBox x:Name="tbInputLog" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="1" Margin="10,5,10,5" Foreground="Red"/>
+        <TextBlock TextWrapping="WrapWithOverflow" Grid.Row="1" Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center" Margin="10,5,10,5">Select port name</TextBlock>
+        <ComboBox x:Name="cbPortNames" Grid.Row="1" Grid.Column="1" Style="{StaticResource ConnectPanel}"></ComboBox>
+        <Button x:Name="btConnect" Click="BtConnect_Click" Content="Connect" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ConnectPanel}"/>
+        <Button x:Name="btStart" Click="btStart_Click" Content="Start measure" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ConnectPanel}"/>
+        <ListView Grid.Row="0" Grid.Column="2" Grid.RowSpan="6" Margin="0,5,10,5"></ListView>
+        <TextBox x:Name="tbOutputLog" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="1" Margin="10,5,10,5" Foreground="Green"/>
+        <TextBox x:Name="tbInputLog" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="1" Margin="10,5,10,5" Foreground="Red"/>
+        <Menu Grid.Row="0" Grid.ColumnSpan="3">
+            <MenuItem Header="File">
+                <MenuItem Header="Settings"></MenuItem>
+                <Separator/>
+                <MenuItem Header="Exit"></MenuItem>
+            </MenuItem>
+        </Menu>
     </Grid>
 
 </Window>
