--- a/ShellMeter/Views/MainWindow.xaml
+++ b/ShellMeter/Views/MainWindow.xaml
@@ -36,9 +36,9 @@
         <TextBox x:Name="tbOutputLog" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="1" Margin="10,5,10,5" Foreground="Green"/>
         <TextBox x:Name="tbInputLog" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="1" Margin="10,5,10,5" Foreground="Red"/>
         <Menu Grid.Row="0" Grid.ColumnSpan="3">
-            <MenuItem Header="Export"></MenuItem>
-            <MenuItem Header="Settings"></MenuItem>
-            <MenuItem Header="Exit"></MenuItem>
+            <MenuItem x:Name="exportMenu" Header="Export" Click="exportMenu_Click"></MenuItem>
+            <MenuItem x:Name="settingMenu" Header="Settings" Click="settingMenu_Click"></MenuItem>
+            <MenuItem x:Name="exitMenu" Header="Exit" Click="exitMenu_Click"></MenuItem>
         </Menu>
     </Grid>
 
